--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </main>
     <footer>
       <p>
-        2022 ©
+        2022 © Argen Saipzhanov
         <a href="https://linktr.ee/jyldyzacademy2020">Jyldyz Academy</a>
       </p>
     </footer>
