--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
     <title>Argen Saipzhanov</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="#home">Argen Saipzhanov</a>
-        <ul>
-          <li>
-            <a href="#home">Home</a>
+    <header class="header">
+      <nav class="header-navigation">
+        <a id="logo" class="header-logo" href="#home">Argen Saipzhanov</a>
+        <ul class="menu">
+          <li class="menu-item">
+            <a class="menu-link" href="#home">Home</a>
           </li>
-          <li>
-            <a href="#skills">Skills</a>
+          <li class="menu-item">
+            <a class="menu-link" href="#skills">Skills</a>
           </li>
-          <li>
-            <a href="#code">Code Example</a>
+          <li class="menu-item">
+            <a class="menu-link" href="#code">Code Example</a>
           </li>
-          <li>
-            <a href="#languages">Languages</a>
+          <li class="menu-item">
+            <a class="menu-link" href="#languages">Languages</a>
           </li>
         </ul>
       </nav>
