--- a/index.html
+++ b/index.html
@@ -5,26 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Argen Saipzhanov</title>
+    <link rel="stylsheet" href="style.css" />
   </head>
   <body>
     <header class="header">
-      <nav class="header-navigation">
-        <a id="logo" class="header-logo" href="#home">Argen Saipzhanov</a>
-        <ul class="menu">
-          <li class="menu-item">
-            <a class="menu-link" href="#home">Home</a>
-          </li>
-          <li class="menu-item">
-            <a class="menu-link" href="#skills">Skills</a>
-          </li>
-          <li class="menu-item">
-            <a class="menu-link" href="#code">Code Example</a>
-          </li>
-          <li class="menu-item">
-            <a class="menu-link" href="#languages">Languages</a>
-          </li>
-        </ul>
-      </nav>
+      <div class="container">
+        <nav class="header-navigation">
+          <a id="logo" class="header-logo" href="#home">Argen Saipzhanov</a>
+          <ul class="menu">
+            <li class="menu-item">
+              <a class="menu-link" href="#home">Home</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="#skills">Skills</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="#code">Code Example</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="#languages">Languages</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
       <img src="img/argen.jpg" alt="Argen's avatar" width="170" />
       <h1>Argen Saipzhanov</h1>
       <h3>Beginner Web-Developer</h3>
