--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Argen Saipzhanov</title>
-    <link rel="stylsheet" href="style.css" />
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <header class="header">
-      <div class="container">
-        <nav class="header-navigation">
+      <nav class="header-navigation">
+        <div class="container">
           <a id="logo" class="header-logo" href="#home">Argen Saipzhanov</a>
           <ul class="menu">
             <li class="menu-item">
@@ -26,8 +26,8 @@
               <a class="menu-link" href="#languages">Languages</a>
             </li>
           </ul>
-        </nav>
-      </div>
+        </div>
+      </nav>
       <img src="img/argen.jpg" alt="Argen's avatar" width="170" />
       <h1>Argen Saipzhanov</h1>
       <h3>Beginner Web-Developer</h3>
