--- a/index.html
+++ b/index.html
@@ -28,32 +28,38 @@
           </ul>
         </div>
       </nav>
-      <img src="img/argen.jpg" alt="Argen's avatar" width="170" />
-      <h1>Argen Saipzhanov</h1>
-      <h3>Beginner Web-Developer</h3>
-      <p>
-        I am a highly motivated young man interested in web programming. I am
-        eager to get more knowledge about programming.
-      </p>
-      <h3>Contacts</h3>
-      <ul>
-        <li>
-          <h4>Location</h4>
-          <a href="https://goo.gl/maps/wcRmATVpYsoXhuP57">Antalya, Turkey</a>
-        </li>
-        <li>
-          <h4>Phone number</h4>
-          <a href="tel:+996755207039">+996 755 20 70 39</a>
-        </li>
-        <li>
-          <h4>Email</h4>
-          <a href="mailto:argen.saipzhanov.alt@gmail.com"
-            >argen.saipzhanov.alt@gmail.com</a
-          >
-        </li>
-      </ul>
     </header>
     <main>
+      <section class="intro">
+        <div class="container">
+          <div clas="intro-inner">
+            <img src="img/argen.jpg" alt="Argen's avatar" width="170" />
+            <h1>Argen Saipzhanov</h1>
+            <h3>Beginner Web-Developer</h3>
+            <p>
+              I am a highly motivated young man interested in web programming. I
+              am eager to get more knowledge about programming.
+            </p>
+          </div>
+        </div>
+        <h3>Contacts</h3>
+        <ul>
+          <li>
+            <h4>Location</h4>
+            <a href="https://goo.gl/maps/wcRmATVpYsoXhuP57">Antalya, Turkey</a>
+          </li>
+          <li>
+            <h4>Phone number</h4>
+            <a href="tel:+996755207039">+996 755 20 70 39</a>
+          </li>
+          <li>
+            <h4>Email</h4>
+            <a href="mailto:argen.saipzhanov.alt@gmail.com"
+              >argen.saipzhanov.alt@gmail.com</a
+            >
+          </li>
+        </ul>
+      </section>
       <section id="skills">
         <h2>Skills</h2>
         <ul>
