--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="container">
           <div class="intro-inner">
             <dev class="intro-left">
-              <img class="intro-img" src="img/argen.jpg" alt="Argen's avatar" />
+              <img class="intro-img" src="img/film_glaz_avatara.jpg" alt="Argen's avatar" />
             </dev>
             <div class="intro-right">
               <h1>Argen Saipzhanov</h1>
