--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
-    <header class="header">
+    <header id="home" class="header">
       <div class="container">
         <nav class="header-navigation">
           <a id="logo" class="header-logo" href="#home">Argen Saipzhanov</a>
