--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
-    <header id="home" class="header">
+    <header class="header">
       <div class="container">
         <nav class="header-navigation">
-          <a id="logo" class="header-logo" href="#home">Argen Saipzhanov</a>
+          <a id="logo" class="header-logo">Argen Saipzhanov</a>
           <ul class="menu">
             <li class="menu-item">
-              <a class="menu-link" href="#home">Home</a>
+              <a class="menu-link" href="#logo">Home</a>
             </li>
             <li class="menu-item">
               <a class="menu-link" href="#skills">Skills</a>
@@ -102,9 +102,9 @@
         <div class="container">
         <h2 class="section-title">Languages</h2>
         <ul>
+          <li><b>Kyrgyz</b> &mdash; Native</li>
           <li><b>English</b> &mdash; Just a little</li>
           <li><b>Russian</b> &mdash; Fluent</li>
-          <li><b>Kyrgyz</b> &mdash; Native</li>
           <li><b>Turkish</b> &mdash; Above average</li>
         </ul>
         </div>
