--- a/index.html
+++ b/index.html
@@ -55,20 +55,23 @@
           <h2 class="section-title">Contacts</h2>
           <ul>
             <li>
+              <h4><img src="/img/iconmonstr-location-1.svg" alt="location" width="50px"></h4>
               <h4>Location</h4>
-              <a href="https://goo.gl/maps/wcRmATVpYsoXhuP57"
+              <h4><a href="https://goo.gl/maps/wcRmATVpYsoXhuP57"
                 >Antalya, Turkey</a
-              >
+              ></h4>
             </li>
             <li>
+              <h4><img src="/img/iconmonstr-phone-3.svg" alt="Number" width="50px"></h4>
               <h4>Phone</h4>
-              <a href="tel:+996755207039">+996 755 20 70 39</a>
+              <h4><a href="tel:+996755207039">+996 755 20 70 39</a></h4>
             </li>
             <li>
+              <h4><img src="/img/iconmonstr-gmail-1.svg" alt="Email" width="50px"></h4>
               <h4>Email</h4>
-              <a href="mailto:argen.saipzhanov.alt@gmail.com"
+              <h4><a href="mailto:argen.saipzhanov.alt@gmail.com"
                 >argen.saipzhanov.alt@gmail.com</a
-              >
+              ></h4>
             </li>
           </ul>
         </div>
@@ -113,7 +116,7 @@
         <div class="container">
         <h2 class="section-title">Education</h2>
         <ul>
-          <li><b>Manas High School</b></li>
+          <li class="li"><b>Manas High School</b></li>
         </ul>
       </section>
       </div>
