--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div class="container">
         <h2 class="section-title">Education</h2>
         <ul>
-          <li class="li"><b>Manas High School</b></li>
+          <li><b>Manas High School</b></li>
         </ul>
       </section>
       </div>
