--- a/index.html
+++ b/index.html
@@ -115,11 +115,13 @@
       <section id="education" class="edu section">
         <div class="container">
         <h2 class="section-title">Education</h2>
+        <div class="title-wrap">
         <ul>
-          <li><b>Manas High School</b></li>
+          <li class="title">Manas High School</li>
         </ul>
-      </section>
+        </div>
       </div>
+      </section>
     </main>
     <footer>
       <div class="container">
