Change dev to div

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
       <section class="intro section">
         <div class="container">
           <div class="intro-inner">
-            <dev class="intro-left">
+            <div class="intro-left">
               <img class="intro-img" src="img/film_glaz_avatara.jpg" alt="Argen's avatar" />
-            </dev>
+            </div>
             <div class="intro-right">
               <h1>Argen Saipzhanov</h1>
               <h3>Junior Web-Developer</h3>
